Well something is going wrong, but I think it is running on GraphQL now

--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
-    "render-build":"npm install && npm run build"
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose": "^5.11.96",
     "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "apollo-server": "^3.13.0",
+    "mongoose": "^8.14.1"
   }
 }
